WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
232532
Layer tree should not be stuck in frozen state after explicitly stopping a page load
https://bugs.webkit.org/show_bug.cgi?id=232532
Summary
Layer tree should not be stuck in frozen state after explicitly stopping a pa...
Wenson Hsieh
Reported
2021-10-30 12:24:21 PDT
rdar://84522357
Attachments
Speculative fix
(13.07 KB, patch)
2021-10-30 12:54 PDT
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Fix Windows build
(14.56 KB, patch)
2021-10-30 13:26 PDT
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Fix Windows build
(13.75 KB, patch)
2021-10-30 13:32 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Fix test on Windows
(13.69 KB, patch)
2021-10-30 14:34 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-10-30 12:54:03 PDT
Comment hidden (obsolete)
Created
attachment 442914
[details]
Speculative fix
Wenson Hsieh
Comment 2
2021-10-30 13:26:48 PDT
Comment hidden (obsolete)
Created
attachment 442915
[details]
Fix Windows build
Wenson Hsieh
Comment 3
2021-10-30 13:32:33 PDT
Comment hidden (obsolete)
Created
attachment 442916
[details]
Fix Windows build
Wenson Hsieh
Comment 4
2021-10-30 14:34:54 PDT
Created
attachment 442919
[details]
Fix test on Windows
EWS
Comment 5
2021-10-30 20:19:22 PDT
Committed
r285089
(
243731@main
): <
https://commits.webkit.org/243731@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 442919
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug